--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,10 @@ body {
     padding-bottom: 40px;
     margin-top: 40px;
     border-top: 1px solid #eee;
+    position: fixed;
+    bottom: 0;
+    left: 40px;
+    right: 40px;
   }
   
   /* Main marketing message and sign up button */
@@ -61,4 +65,11 @@ body {
 
   .home-media-image {
     width: 25%;
+  }
+
+  /* Login */
+
+  .row-login-form {
+    margin-top: 50px;
+
   }
