--- a/css/style.css
+++ b/css/style.css
@@ -95,9 +95,14 @@ body {
 
   /* Events page */
 
+  .events-card-deck {
+    margin-bottom: 15px;
+  }
+
   .events-card-deck .card {
     box-shadow: 0px 0px 2px;
     color: black;
+    padding: 0 0 10px 0;
   }
 
   .events-card-deck .card:hover {
